--- a/app/src/main/res/values/guideline_color.xml
+++ b/app/src/main/res/values/guideline_color.xml
@@ -6,4 +6,6 @@
     <color name="white_fade">@color/fade</color>
 
     <color name="background_color">@color/bg_color</color>
+    <color name="toolbar_color">@android:color/holo_blue_light</color>
+
 </resources>
