--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -31,7 +31,7 @@
     <TextView
             android:id="@+id/locationTimeZone"
             style="@style/Text"
-            android:layout_marginTop="@dimen/margin_3"
+            android:layout_marginTop="@dimen/small_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -60,7 +60,7 @@
             tools:text="@string/_25" />
 
     <TextView
-            android:id="@+id/CurrentSummary"
+            android:id="@+id/currentSummary"
             style="@style/Text"
             android:textSize="@dimen/text_size_2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,12 +69,12 @@
             tools:text="@string/clear_weather" />
 
     <TextView
-            android:id="@+id/CurrentDay"
+            android:id="@+id/currentDay"
             style="@style/Text"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginTop="@dimen/margin_3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CurrentSummary"
+            app:layout_constraintTop_toBottomOf="@+id/currentSummary"
             tools:text="@string/at_7_30_pm" />
 
     <TextView
@@ -91,7 +91,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CurrentDay"
+            app:layout_constraintTop_toBottomOf="@+id/currentDay"
             tools:background="@color/main_color" />
 
     <ImageView
@@ -201,7 +201,7 @@
             android:id="@+id/visibilityImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standard_margin"
+            android:layout_marginTop="24dp"
             app:layout_constraintEnd_toStartOf="@+id/cloudCoverImage"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/humidityImageView"
@@ -262,7 +262,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cloudCoverImage" />
 
     <TextView
-            android:id="@+id/HumidityValue"
+            android:id="@+id/humidityValue"
             style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -288,7 +288,7 @@
             style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/small_margin"
             tools:text="@string/_25"
             app:layout_constraintEnd_toEndOf="@+id/cloudTextView"
             app:layout_constraintStart_toStartOf="@+id/cloudTextView"
