--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:background="@null"
         tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-            android:id="@+id/mainActivityToolbar"
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/toolbar_color">
+            android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/toolbarTitle"
-                style="@style/Text"
-                android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/mainActivityToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/background_color">
+
+            <TextView
+                    android:id="@+id/toolbarTitle"
+                    style="@style/Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/text_size_2" />
+        </androidx.appcompat.widget.Toolbar>
+
+        <com.google.android.material.tabs.TabLayout
+                android:id="@+id/mainActivityTabs"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="@dimen/text_size_2" />
-    </androidx.appcompat.widget.Toolbar>
+                android:background="@color/background_color"
+                app:tabIndicatorColor="@color/toolbar_color"
+                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+                app:tabSelectedTextColor="@color/white"
+                app:tabIndicatorGravity="bottom"
+                app:tabIconTint="@color/toolbar_color"
+                app:tabInlineLabel="true"
+                app:tabTextColor="@color/white" />
 
-    <FrameLayout
-            android:id="@+id/fragmentFrame"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navigationView"
+
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/mainActivityViewPager"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:itemBackground="@color/toolbar_color"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
-            app:menu="@menu/navigation" />
-
-</LinearLayout>
+            android:layout_gravity="bottom|end"
+            android:background="@color/white_fade"
+            android:layout_margin="@dimen/standard_margin" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
