--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,38 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportHeight="108"
-        android:viewportWidth="108">
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="1044.898"
+    android:viewportHeight="1044.898">
+  <group android:translateX="266.44897"
+      android:translateY="266.44897">
     <path
-            android:fillType="evenOdd"
-            android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                    android:endX="78.5885"
-                    android:endY="90.9159"
-                    android:startX="48.7653"
-                    android:startY="61.0927"
-                    android:type="linear">
-                <item
-                        android:color="#44000000"
-                        android:offset="0.0"/>
-                <item
-                        android:color="#00000000"
-                        android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
+        android:pathData="m61,256c0,-8.284 -6.716,-15 -15,-15h-31c-8.284,0 -15,6.716 -15,15s6.716,15 15,15h31c8.284,0 15,-6.716 15,-15zM497,241h-31c-8.284,0 -15,6.716 -15,15s6.716,15 15,15h31c8.284,0 15,-6.716 15,-15s-6.716,-15 -15,-15zM256,0c-8.284,0 -15,6.716 -15,15v31c0,8.284 6.716,15 15,15s15,-6.716 15,-15v-31c0,-8.284 -6.716,-15 -15,-15zM256,451c-8.284,0 -15,6.716 -15,15v31c0,8.284 6.716,15 15,15s15,-6.716 15,-15v-31c0,-8.284 -6.716,-15 -15,-15zM96.901,393.886 L75.688,415.099c-5.858,5.858 -5.858,15.355 0,21.213s15.356,5.857 21.213,0l21.213,-21.213c5.858,-5.858 5.858,-15.355 0,-21.213 -5.857,-5.859 -15.355,-5.859 -21.213,0zM415.099,118.114 L436.312,96.901c5.858,-5.858 5.858,-15.355 0,-21.213 -5.857,-5.858 -15.355,-5.858 -21.213,0l-21.213,21.213c-5.858,5.858 -5.858,15.355 0,21.213 5.857,5.859 15.356,5.858 21.213,0zM96.901,75.688c-5.857,-5.858 -15.355,-5.858 -21.213,0s-5.858,15.355 0,21.213l21.213,21.213c5.858,5.858 15.356,5.857 21.213,0 5.858,-5.858 5.858,-15.355 0,-21.213zM415.099,393.886c-5.857,-5.858 -15.355,-5.858 -21.213,0s-5.858,15.355 0,21.213l21.213,21.213c5.858,5.858 15.356,5.857 21.213,0 5.858,-5.858 5.858,-15.355 0,-21.213zM181.377,436.157c-7.651,-3.171 -16.428,0.464 -19.598,8.118l-11.481,27.716c-3.17,7.653 0.464,16.428 8.118,19.598 7.678,3.181 16.439,-0.49 19.598,-8.118l11.481,-27.716c3.17,-7.653 -0.464,-16.428 -8.118,-19.598zM353.584,20.411c-7.653,-3.172 -16.428,0.463 -19.598,8.118l-11.481,27.716c-3.17,7.653 0.464,16.428 8.118,19.598 7.664,3.176 16.433,-0.477 19.598,-8.118l11.481,-27.716c3.171,-7.653 -0.464,-16.428 -8.118,-19.598zM28.529,178.014 L56.245,189.495c1.877,0.778 3.821,1.146 5.734,1.146 5.886,0 11.471,-3.487 13.864,-9.264 3.17,-7.653 -0.464,-16.428 -8.118,-19.598l-27.716,-11.481c-7.654,-3.172 -16.428,0.463 -19.598,8.118 -3.17,7.653 0.464,16.427 8.118,19.598zM483.471,333.986 L455.755,322.505c-7.655,-3.17 -16.428,0.463 -19.598,8.118 -3.17,7.653 0.464,16.428 8.118,19.598l27.716,11.481c7.678,3.181 16.439,-0.49 19.598,-8.118 3.17,-7.653 -0.464,-16.427 -8.118,-19.598zM350.221,444.274c-3.17,-7.654 -11.944,-11.289 -19.598,-8.118 -7.654,3.17 -11.288,11.945 -8.118,19.598l11.481,27.716c3.163,7.638 11.93,11.295 19.598,8.118 7.654,-3.17 11.288,-11.945 8.118,-19.598zM178.014,28.529c-3.17,-7.654 -11.944,-11.289 -19.598,-8.118 -7.654,3.17 -11.288,11.945 -8.118,19.598l11.481,27.716c3.163,7.638 11.93,11.295 19.598,8.118 7.654,-3.17 11.288,-11.945 8.118,-19.598zM436.157,181.377c3.163,7.638 11.93,11.295 19.598,8.118l27.716,-11.481c7.654,-3.17 11.288,-11.945 8.118,-19.598 -3.169,-7.654 -11.943,-11.289 -19.598,-8.118l-27.716,11.481c-7.654,3.17 -11.289,11.945 -8.118,19.598zM75.843,330.623c-3.169,-7.654 -11.944,-11.289 -19.598,-8.118l-27.716,11.481c-7.654,3.17 -11.288,11.945 -8.118,19.598 3.163,7.638 11.93,11.295 19.598,8.118l27.716,-11.481c7.654,-3.17 11.289,-11.945 8.118,-19.598z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="512"
+            android:startX="256"
+            android:endY="0"
+            android:endX="256"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFFE59A"/>
+          <item android:offset="1" android:color="#FFFFFFD5"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-            android:fillColor="#FFFFFF"
-            android:fillType="nonZero"
-            android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1"/>
+        android:pathData="M256,256m-165,0a165,165 0,1 1,330 0a165,165 0,1 1,-330 0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="421"
+            android:startX="256"
+            android:endY="91"
+            android:endX="256"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFD5900"/>
+          <item android:offset="1" android:color="#FFFFDE00"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
