--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Standard -->
+    <dimen name="very_small">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
     <dimen name="medium_margin">12dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
