--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -4,7 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
         android:padding="@dimen/margin_1"
         tools:context=".fragments.CurrentFragment">
 
@@ -26,7 +25,7 @@
             app:layout_constraintEnd_toStartOf="@+id/temp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/locationTimeZone"
-            tools:src="@drawable/clear_night" />
+            tools:src="@drawable/ic_clear" />
 
     <TextView
             android:id="@+id/locationTimeZone"
@@ -48,16 +47,15 @@
             tools:srcCompat="@drawable/ic_celsius_degrees_symbol_of_temperature" />
 
     <TextView
-            android:id="@+id/temp"
-            style="@style/Text"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/text_size_4"
-            app:layout_constraintBottom_toTopOf="@+id/currentSummary"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/locationTimeZone"
-            tools:text="@string/_25" />
+        android:id="@+id/temp"
+        style="@style/Text"
+        android:textSize="@dimen/text_size_4"
+        app:layout_constraintBottom_toTopOf="@+id/currentSummary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationTimeZone"
+        tools:text="@string/_25" />
 
     <TextView
             android:id="@+id/currentSummary"
