add views to the daily_recycle_item.xml

--- a/app/src/main/res/layout/daily_recycle_item.xml
+++ b/app/src/main/res/layout/daily_recycle_item.xml
@@ -2,24 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/at_7_30_pm" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/cloudCover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/cloud_cover"
+        android:text="@string/cloud_cover"
+        style="@style/Text"
         app:layout_constraintBottom_toBottomOf="@+id/precipitation"
         app:layout_constraintEnd_toEndOf="@+id/couldCoverImage"
         app:layout_constraintHorizontal_bias="0.5"
@@ -31,11 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
+        android:src="@drawable/hourly_ic_rain"
         app:layout_constraintEnd_toStartOf="@+id/windImage"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/couldCoverImage"
-        app:layout_constraintTop_toBottomOf="@+id/time"
-        tools:srcCompat="@drawable/hourly_ic_rain" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/windImage"
@@ -46,7 +37,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/precipitationImage"
         app:layout_constraintTop_toTopOf="@+id/precipitationImage"
-        tools:srcCompat="@drawable/hourly_ic_wind" />
+        android:src="@drawable/hourly_ic_wind" />
 
     <ImageView
         android:id="@+id/couldCoverImage"
@@ -57,7 +48,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/precipitationImage"
-        tools:srcCompat="@drawable/hourly_ic_cloudy_night" />
+        android:src="@drawable/hourly_ic_cloudy_night" />
 
     <ImageView
         android:id="@+id/temperatureImage"
@@ -68,13 +59,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/windImage"
         app:layout_constraintTop_toTopOf="@+id/windImage"
-        tools:srcCompat="@drawable/hourly_ic_clear_night" />
+        android:src="@drawable/hourly_ic_clear_night" />
 
     <TextView
         android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/temperature"
+        style="@style/Text"
+        android:text="@string/temperature"
         app:layout_constraintBottom_toBottomOf="@+id/wind"
         app:layout_constraintEnd_toEndOf="@+id/temperatureImage"
         app:layout_constraintHorizontal_bias="0.5"
@@ -85,8 +77,9 @@
         android:id="@+id/wind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Text"
         android:layout_marginTop="@dimen/very_small"
-        tools:text="@string/wind"
+        android:text="@string/wind"
         app:layout_constraintEnd_toEndOf="@+id/windImage"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/windImage"
@@ -96,7 +89,8 @@
         android:id="@+id/precipitation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/precipitation"
+        android:text="@string/precipitation"
+        style="@style/Text"
         app:layout_constraintBottom_toBottomOf="@+id/wind"
         app:layout_constraintEnd_toEndOf="@+id/precipitationImage"
         app:layout_constraintHorizontal_bias="0.5"
@@ -108,6 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/_20"
+        style="@style/Text"
         app:layout_constraintBottom_toBottomOf="@+id/windValue"
         app:layout_constraintEnd_toEndOf="@+id/precipitation"
         app:layout_constraintHorizontal_bias="0.5"
@@ -120,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         tools:text="@string/speed_wind"
+        style="@style/Text"
         app:layout_constraintEnd_toEndOf="@+id/wind"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/wind"
@@ -130,6 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/_25"
+        style="@style/Text"
         app:layout_constraintBottom_toBottomOf="@+id/windValue"
         app:layout_constraintEnd_toEndOf="@+id/temperature"
         app:layout_constraintHorizontal_bias="0.5"
@@ -141,10 +138,50 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/_20"
+        style="@style/Text"
         app:layout_constraintBottom_toBottomOf="@+id/precipitationValue"
         app:layout_constraintEnd_toEndOf="@+id/cloudCover"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/cloudCover"
         app:layout_constraintTop_toTopOf="@+id/precipitationValue" />
+
+    <TextView
+        android:id="@+id/time"
+        style="@style/Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/very_small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/temperature"
+        app:layout_constraintStart_toStartOf="@+id/temperature"
+        app:layout_constraintTop_toBottomOf="@+id/precipitationValue"
+        tools:text="@string/at_7_30_pm" />
+
+    <TextView
+        android:id="@+id/day"
+        style="@style/Text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/cloudCover"
+        app:layout_constraintStart_toStartOf="@+id/cloudCover"
+        app:layout_constraintTop_toBottomOf="@+id/cloudCoverValue"
+        app:layout_constraintVertical_bias="0.555"
+        tools:text="@string/at_7_30_pm" />
+
+    <TextView
+        android:id="@+id/summary"
+        style="@style/Text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/time"
+        app:layout_constraintStart_toEndOf="@+id/day"
+        app:layout_constraintTop_toBottomOf="@+id/precipitationValue"
+        tools:text="@string/clear_weather" />
+
+    <View
+        android:id="@+id/whiteLine"
+        style="@style/Divider"
+        android:background="@color/main_color"
+        android:layout_marginTop="@dimen/very_small"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
