--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -295,7 +295,7 @@
         tools:text="@string/_25" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/spinner_animation_view"
+        android:id="@+id/refreshAnimationView"
         android:layout_width="89dp"
         android:layout_height="65dp"
         android:layout_marginTop="@dimen/large_margin"
@@ -306,6 +306,6 @@
         app:layout_constraintTop_toBottomOf="@+id/visibilityValue"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/cloud_loader" />
+        app:lottie_rawRes="@raw/refresh" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
